[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["nosh"]
exclude = []


[project]
name = "nosh"
version = "0.0.0"
authors = [
        { name = "Ryo Nakamura", email = "upa@haeena.net" },
]

dependencies = [
	"ifaddr"
]
