[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "nosh"
description = "Nosh is a libarry to implement CLI for networking devices"
authors = [
        { name = "Ryo Nakamura", email = "upa@haeena.net" },
]

dynamic = ["version"]

dependencies = [
	"ifaddr"
]
